Fix Pagination API and FE